Fix text-align in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ FOOTER SECTION
 
 .footer a {
   text-decoration: none;
+  text-align: center;
 }
 
 /*
